--- a/Framework(Real)/DirectX_FrameWork/DirectX_FrameWork.vcxproj
+++ b/Framework(Real)/DirectX_FrameWork/DirectX_FrameWork.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="cpp.hint" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
